Change thumbnail layout .

--- a/main.css
+++ b/main.css
@@ -168,7 +168,7 @@ nav ul li:hover {
 
 }
 
-.thumb-overlay {
+/*.thumb-overlay {
 	background: rgba(0,0,0,0.5);
     background: -webkit-linear-gradient(rgba(0,0,0,0), rgba(0,0,0,0.75));
     background: -o-linear-gradient(rgba(0,0,0,0), rgba(0,0,0,0.75));
@@ -177,18 +177,22 @@ nav ul li:hover {
 	position: absolute;
 	width: calc(100% - 10px);
     height: calc(100% - 10px);
+}*/
+
+.thumb-overlay {
+	height: 85px
 }
 
 .thumb-description {
 	position: absolute;
-    bottom: 20px;
+    bottom: 21px;
     left: 15px;
     line-height: .5;
 }
 
 .thumb-title {
 	font-size: 18px;
-	color: #99a8ff;
+	color: #8c9eff;
 }
 
 .thumb-description p {
